--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,11 @@ spring:
     url: jdbc:mysql://39.108.128.195:3306/arvinzhang
     username: root
     password: arvinzhang
-    # 使用druid数据源
+    # Druid数据库连接
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
+
+## mybatis配置
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: com.yingwu.digital.bean.POJO
